# my-master-project

./: .gitignore  note.md  pyproject.toml
notebook/: a.ipynb  b.ipynb  c.ipynb  d.ipynb  e.ipynb  f.ipynb  g.ipynb  h.ipynb  i.ipynb
proj-01/: README.md  pyproject.toml
proj-01/notebook/: a.ipynb  c.ipynb  e.ipynb  f.ipynb
proj-01/src/: model.py
proj-02/: .gitignore  a.ipynb  b.ipynb  pyproject.toml
proj-03/: .gitignore  eval.ipynb  main.py  matrix_factorization.ipynb  note.md  preprocess.ipynb  preprocess2.ipynb  pyproject.toml  run_diversity.ipynb  run_lambda.ipynb  train.ipynb  train_nn.ipynb  train_rmf.ipynb  util.py  visualize_alpha.ipynb  visualize_alpha_nn_mf.ipynb
proj-03/notebooks/: exp_alpha_nn_mf.ipynb  exp_diversity.ipynb  exp_lambda.ipynb  exp_sampling.ipynb  preprocess.ipynb  preprocess_dunnhumby.ipynb  vis_alpha.ipynb  vis_alpha_nn_mf.ipynb  vis_evaluation.ipynb
proj-03/src/: preprocess.py
proj-03/src/lib/: config.py  main.py  model.py  sampler.py  util.py
proj-03/tests/: test_train.py
src/: model.py  util.py
tests/: test_ml_train.py
