[tool.poetry]
name = "my-master-thesis"
version = "0.1.0"
description = ""
authors = ["Tatsuya Ishii <tishii2479@gmail.com>"]
readme = "README.md"
packages = [{include = "my_master_thesis"}]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
mypy = "^1.6.1"
black = "^23.10.1"
isort = "^5.12.0"
ipykernel = "^6.26.0"
pandas = "^2.1.2"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
tqdm = "^4.66.1"
torch = "^2.1.0"
gensim = "^4.3.2"
pytest = "^7.4.3"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
