[tool.poetry]
name = "proj-03"
version = "0.1.0"
description = ""
authors = ["Tatsuya Ishii <tishii2479@gmail.com>"]
readme = "README.md"
packages = [{include = "proj_03"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.3"
ipykernel = "^6.29.0"
tqdm = "^4.66.1"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
